Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 Sunil S Nayak  </p>
 
 <p><strong>Description:</strong><br>
-An Automatic Guitar Easy-Tab maker written in Python2 (work in progress)  </p>
+An Automatic Guitar Easy-Tab maker written in Python2 (work in progress - audio input support will be added once this is proven to work well for a reasonable number of solos, chord support will be added sometime later)  </p>
 
 <p><strong>Dependencies:</strong><br>
 Only Python2 is needed.  </p>
@@ -39,7 +39,7 @@ Only Python2 is needed.  </p>
 Make sure you set the proper seed value for the start note at "curpos" as otherwise the first note will be wrongly tabbed.<br>
 Also make sure you set the proper tuning for the guitar with the right octaves for each note in the tuning desired.  </p>
 
-<p><strong>Sample Output:</strong>::
+<p><strong>Sample Output:</strong>::<br>
     $ python tabber.py</p>
 
 <pre><code>E3   F3   F#3   G3   G#3   A3   A#3   B3   C4   C#4   D4   D#4   E4   F4   F#4   G4   G#4   A4   A#4   B4    
